--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -17,6 +17,6 @@
 
 <resources>
     <array name="preloaded_fonts" translatable="false">
-        <item>@font/open_sans_light</item>
+        <item>@font/poppins</item>
     </array>
 </resources>
