Fixed themes to use AppCompat.
- Consolidated v21+ and prior styles into one.
- Added colors to customize AppCompat theme.

--- a/app/src/main/res/layout/activity_base_animation.xml
+++ b/app/src/main/res/layout/activity_base_animation.xml
@@ -19,7 +19,7 @@
              android:id="@+id/container"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:background="@color/background_from">
+    android:background="@color/backgroundColor">
 
     <ImageView
             android:id="@+id/rocket"
