--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,23 +14,22 @@
   ~ limitations under the License.
   -->
 
-<resources>
+<resources>>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat">
-        <!-- Customize your theme here. -->
+    <!-- More info from DAC - https://goo.gl/88QYH9 -->
+    <style name="MyTheme.NoActionBar" parent="Theme.AppCompat">
+
+        <!-- Set AppCompat color theming attribs-->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-    </style>
+        <item name="android:textColorPrimary">@color/textColorPrimary</item>
 
-    <style name="AppTheme.NoActionBar">
+        <!-- Don't show ActionBar, using AppCompat.Toolbar instead -->
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+
     </style>
-
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
 </resources>
