Updating copyright and source formatting.

--- a/app/src/main/res/layout/activity_base_animation.xml
+++ b/app/src/main/res/layout/activity_base_animation.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2017 Nazmul Idris. All rights reserved.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,28 +15,27 @@
   -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:id="@+id/container"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
+    android:id="@+id/container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/backgroundColor">
 
     <ImageView
-            android:id="@+id/rocket"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@android:color/transparent"
-            android:layout_gravity="bottom|center_horizontal"
-            android:src="@drawable/rocket"/>
+        android:id="@+id/rocket"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@android:color/transparent"
+        android:layout_gravity="bottom|center_horizontal"
+        android:src="@drawable/rocket" />
 
     <ImageView
-            android:id="@+id/doge"
-            android:layout_marginBottom="53dp"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:scaleType="centerCrop"
-            android:background="@android:color/transparent"
-            android:src="@drawable/doge"
-            android:layout_gravity="bottom|center_horizontal"
-    />
+        android:id="@+id/doge"
+        android:layout_marginBottom="53dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:scaleType="centerCrop"
+        android:background="@android:color/transparent"
+        android:src="@drawable/doge"
+        android:layout_gravity="bottom|center_horizontal" />
 
 </FrameLayout>
