--- a/app/src/main/res/animator/jump_and_blink.xml
+++ b/app/src/main/res/animator/jump_and_blink.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2017 Nazmul Idris. All rights reserved.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,25 +15,25 @@
   -->
 
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-     android:ordering="together">
+    android:ordering="together">
 
     <objectAnimator
-            android:propertyName="alpha"
-            android:duration="1000"
-            android:repeatCount="1"
-            android:repeatMode="reverse"
-            android:interpolator="@android:interpolator/linear"
-            android:valueFrom="1.0"
-            android:valueTo="0.0"
-            android:valueType="floatType"/>
+        android:propertyName="alpha"
+        android:duration="1000"
+        android:repeatCount="1"
+        android:repeatMode="reverse"
+        android:interpolator="@android:interpolator/linear"
+        android:valueFrom="1.0"
+        android:valueTo="0.0"
+        android:valueType="floatType" />
 
     <objectAnimator
-            android:propertyName="translationY"
-            android:duration="1000"
-            android:repeatCount="1"
-            android:repeatMode="reverse"
-            android:interpolator="@android:interpolator/bounce"
-            android:valueFrom="0"
-            android:valueTo="-500"
-            android:valueType="floatType"/>
+        android:propertyName="translationY"
+        android:duration="1000"
+        android:repeatCount="1"
+        android:repeatMode="reverse"
+        android:interpolator="@android:interpolator/bounce"
+        android:valueFrom="0"
+        android:valueTo="-500"
+        android:valueType="floatType" />
 </set>
